--- a/style.css
+++ b/style.css
@@ -1,22 +1,22 @@
 @font-face {
     font-family: circular-black;
-    src: url(fonts/fonts/CircularStd-Black.otf);
+    src: url(./assets/fonts/fonts/CircularStd-Black.otf);
 }
 @font-face {
     font-family: circular-bold;
-    src: url(fonts/fonts/CircularStd-Bold.otf);
+    src: url(./assets/fonts/fonts/CircularStd-Bold.otf);
 }
 @font-face {
     font-family: circular-book;
-    src: url(fonts/fonts/CircularStd-Book.otf);
+    src: url(./assets/fonts/fonts/CircularStd-Book.otf);
 }
 @font-face {
     font-family: circular-light;
-    src: url(fonts/fonts/CircularStd-Light.otf);
+    src: url(./assets/fonts/fonts/CircularStd-Light.otf);
 }
 @font-face {
     font-family: circular-medium;
-    src: url(fonts/fonts/CircularStd-Medium.otf);
+    src: url(./assets/fonts/fonts/CircularStd-Medium.otf);
 }
 
 /*=========== RESET ===============================*/
@@ -79,11 +79,6 @@ body {
 
 /*=========== HEADER ===============================*/
 #header {
-    /* position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 100; */
-
     width: 100%;
     min-height: 5.4rem;
 
@@ -94,7 +89,6 @@ body {
     display: flex;
     justify-content: space-between;
 
-    /* max-width: 75rem; */ /* ***** */
     height: 5.4rem;
 
     margin: 0 auto;
@@ -133,26 +127,7 @@ nav ul li a {
 nav ul li a:hover,
 nav ul li a.active {
     color: greenyellow;
-}
-  
-/* nav ul li a::after {
-    content: '';
-    width: 0%;
-    height: 2px;
-    background: greenyellow;
-  
-    position: absolute;
-    left: 0;
-    bottom: -0.5rem;
-  
-    transition: width 0.2s;
-}
-  
-nav ul li a:hover::after,
-nav ul li a.active::after {
-    width: 100%;
-} */
-  
+}  
   
 nav .menu {
     opacity: 0;
@@ -230,7 +205,6 @@ nav.show div.icon-close {
 
 /*=========== MAIN ===============================*/
 
-
 /*=========== HOME ===========*/
 #home{
     background-color: rgb(29, 117, 222);
@@ -307,12 +281,10 @@ nav.show div.icon-close {
 
 }
 
-
 /*=========== ABOUT ===========*/
 
 #about header{
     width: 100%;
-
     
     text-align: center;
 
@@ -481,19 +453,10 @@ nav.show div.icon-close {
     padding-left: 20px;
     padding-right: 20px;
     margin-bottom: 0px;
-    /* margin: 0px 16px 0px 0px;
-    padding-left: 16px;
-    padding-right: 16px;
-    background-color: rgb(255, 255, 255); */
 }
 
 .container-wrapper{
     margin: 50px 0px 26px;
-    /* display: grid;
-    grid-template-rows: repeat(4, auto);
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-flow: column;
-    margin: 50px 0px 26px; */
 }
 
 .card-header{
@@ -505,7 +468,6 @@ nav.show div.icon-close {
     flex-flow: column nowrap;
     align-items: flex-start;
     box-shadow: rgb(255 255 255) 0px 8px 0px 0px, rgb(0 0 0 / 30%) 0px 0px 8px;
-    /* grid-row: 1 / auto;*/
 }
 
 .card-header ul{
@@ -575,12 +537,6 @@ nav.show div.icon-close {
     list-style: none;
     box-shadow: rgb(0 0 0 / 30%) 0px 0px 8px;
     margin-top: 0px;    
-    /* grid-row: 2 / auto;
-    padding-top: 20px;
-    padding-bottom: 16px;
-    list-style: none;
-    box-shadow: rgb(0 0 0 / 30%) 0px 0px 8px;
-    margin-top: 0px; */
 }
 
 .card-body li{
@@ -607,7 +563,6 @@ nav.show div.icon-close {
     box-shadow: rgb(255 255 255) 0px -9px 0px 0px, rgb(0 0 0 / 30%) 0px 0px 8px;
     padding-bottom: 0px;
     text-align: center;
-    /* grid-row: 3 / auto; */ 
 }
 
 .card-buttom .button{
@@ -713,16 +668,16 @@ footer.section{
     display: block;
     width: 24px;
     height: 24px;
-    background-image: url(./insta.svg);
+    background-image: url(./assets/images/insta.svg);
     background-color: currentColor;
 }
 
 .social-icons ul li:nth-child(2) span{
-    background-image: url(./twitter.svg);
+    background-image: url(./assets/images/twitter.svg);
 }
 
 .social-icons ul li:nth-child(3) span{
-    background-image: url(./facebook.svg);
+    background-image: url(./assets/images/facebook.svg);
 }
 
 /* ======================= */
@@ -745,6 +700,7 @@ footer.section{
 .country svg {
     margin: 0 8px 0 0;
 }
+
 /* ======================= */
 .bottom-links {
     display: flex;
@@ -840,20 +796,10 @@ footer.section{
     width: 50%;
 }
 
-
-
-
-
-
-
-
-
-
-
-
 #footer .top-links {
     flex-direction: row;
 }
+
 .top-links dl + dl{
     padding-left:15px;
     margin: 0;
@@ -888,38 +834,37 @@ footer.section{
     width: 132px;
 }
 
-nav .menu{
+nav .menu {
     display: flex;
     align-items: center;
     opacity: 1;
     visibility: visible;
     top: 0rem;
-  }
+}
 
-  nav .menu ul{
+nav .menu ul {
     display: flex;
     gap: 0rem;
-  }
+}
 
-  nav .menu ul li a.title{
+nav .menu ul li a.title {
     padding: 28px 17px;
     font: 400 1.6rem 'circular-bold';
     -webkit-font-smoothing: antialiased;
-  }
+}
 
-  nav .menu ul li:last-child a{
+nav .menu ul li:last-child a {
     padding-right: 0;
-  }
+}
 
-  nav .menu ul li a.active{
+nav .menu ul li a.active {
     font-weight: bold;
     -webkit-font-smoothing: auto;
+}
 
-  }
-
-  nav .icon-menu{
+nav .icon-menu {
     display: none;
-  } 
+} 
 
 nav li.separator {
     display: inline-block;
@@ -949,7 +894,7 @@ footer.section {
     flex: 0 0 auto;
 }
 
-.top-links dt{
+.top-links dt {
     margin: 20px 0;
 }
 
@@ -961,8 +906,6 @@ footer.section {
 .bottom-links {
     width: 100%;
 }
-
-
 }
 
 /* ======================= */
@@ -1007,11 +950,9 @@ footer.section {
     grid-template-columns: repeat(4, 1fr);
     -webkit-box-pack: center;
     justify-content: center;
-
 }
 
 #choice .card-buttom {
     width: 100%;
 }
-
 }
